# otus_fast_api

./: Dockerfile  app.py  config.py  docker-compose.yaml  models.py  pyproject.toml  requirements.txt
alembic/: env.py
docker-build/app/: Dockerfile  entrypoint.sh
models/: __init__.py  base.py  db.py
routers/: api_tasks_router.py  docker_router.py  main_router.py  tasks_router.py
routers/task/: crud.py  views.py
schemas/: task.py
static/: style.css
tasker-app/: .env.default  alembic.ini  app.py  config.py
tasker-app/alembic/: env.py
tasker-app/alembic/versions/: 2025_12_05_1702-732a2f1aa5ff_initial_migration.py  2025_12_05_1709-5c0fb2a4844c_create_task_table.py
tasker-app/models/: db.py  task.py
tasker-app/routers/main/: views.py
tasker-app/routers/task/: dependencies.py
tasker-app/schemas/: task.py
tasker-app/templates/: add_task_form.html  base.html  edit_task.html  index.html  task.html
templates/: about.html  add_task_form.html  edit_task.html  index.html  old_base.html  task.html
