[project]
name = "fastapi-hw"
version = "0.1.3"
description = ""
authors = [
    {name = "Maviroti"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.38.0,<0.39.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "fastapi[standard] (>=0.123.5,<0.124.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg (>=3.3.1,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "psycopg[binary] (>=3.3.1,<4.0.0)",
    "black (>=25.11.0,<26.0.0)"
]
